--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                     <ul>
                                         <li><a href="nosotros.html">Nosotros</a></li>
                                         <li class="has-sub">
-                                            <a href="servicios.html">Servicios</a>
+                                            <a href="./servicios/index.html">Servicios</a>
                                             <ul>
                                                 <li> <a href="single-service.html">Aires Acondicionados</a> </li>
                                                 <li><a href="single-service.html">Energía</a></li>
@@ -140,8 +140,6 @@
     <!-- header-end -->
     <!-- main-area -->
     <main>
-
-
         <!-- search-popup -->
         <div class="modal fade bs-example-modal-lg search-bg popup1" tabindex="-1" role="dialog">
             <div class="modal-dialog modal-lg" role="document">
@@ -1162,7 +1160,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="copy-text text-center">
-                            Copyright &copy; 2022 Indobi. All rights reserved.
+                            Copyright © 2025 EPI AVONTUUR. Todos los derechos reservados.
                         </div>
 
                     </div>
