--- a/servicios.html
+++ b/servicios.html
@@ -160,19 +160,19 @@
 		</div>
 		<!-- /search-popup -->
             <!-- breadcrumb-area -->
-            <section class="breadcrumb-area d-flex align-items-center" style="background-image:url(img/bg/bdrc-bg.png);">
+            <section class="breadcrumb-area d-flex align-items-center" style="background-image:url(./img/features/joyful-young-man-using-laptop-in-departure-lounge-2024-10-20-16-52-31-utc.jpg);">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-left">
                                 <div class="breadcrumb-title">
-                                    <h2>Service</h2>    
+                                    <h2>Servicios</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">Service</li>
+                                        <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Servicios</li>
                                     </ol>
                                 </nav>
                             </div>
