added resend skd packages for php

--- a/servicios/infraestructura.html
+++ b/servicios/infraestructura.html
@@ -64,48 +64,47 @@
                         <div class="row align-items-center">
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html"><img src="../../img/logo/logo.png" alt="logo"></a>
+                                    <a href="index.html"><img src="../img/logo/logo.png" alt="logo"></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8">
         
                                 <div class="main-menu text-center text-xl-right">
-                                    <nav id="mobile-menu" style="display: block;">
+                                    <nav id="mobile-menu">
                                         <ul>
                                             <li><a href="nosotros.html">Nosotros</a></li>
                                             <li class="has-sub">
                                                 <a href="./servicios/index.html">Servicios</a>
                                                 <ul>
-                                                    <li> <a href="single-service.html">Aires Acondicionados</a> </li>
-                                                    <li><a href="single-service.html">Energía</a></li>
-                                                    <li><a href="single-service.html">Iluminación</a></li>
-                                                    <li><a href="single-service.html">Infraestructura</a></li>
-                                                    <li><a href="single-service.html">Obra aeroportuaria</a></li>
-                                                    <li><a href="single-service.html">Remodelación y Obra Civil</a></li>
+                                                    <li> <a href="/servicios/aires-acondicionados.html">Aires Acondicionados</a> </li>
+                                                    <li><a href="/servicios/energia.html">Energía</a></li>
+                                                    <li><a href="/servicios/iluminacion.html">Iluminación</a></li>
+                                                    <li><a href="/servicios/infraestructura.html">Infraestructura</a></li>
+                                                    <li><a href="/servicios/obra-aeroportuaria.html">Obra aeroportuaria</a></li>
+                                                    <li><a href="/servicios/remodelacion-obra-civil.html">Remodelación y Obra Civil</a></li>
                                                 </ul>
                                             </li>
                                             <!-- <li class="has-sub"><a href="#">Pages</a>
-                                                                                    <ul>
-                                                                                        <li><a href="projects.html">Gallery</a></li>
-                                                                                        <li><a href="projects-detail.html">Gallery Details</a></li>
-                                                                                        <li><a href="pricing.html">Pricing</a></li>
-                                                                                        <li><a href="faq.html">Faq</a></li>
-                                                                                        <li><a href="team.html">Team</a></li>
-                                                                                        <li><a href="team-single.html">Team Details</a></li>
-                                                                                        <li><a href="shop.html">Shop</a></li>
-                                                                                        <li><a href="shop-details.html">Shop Details</a>
-                                                                                    </ul>
-                                                                                </li> -->
+                                                                                            <ul>
+                                                                                                <li><a href="projects.html">Gallery</a></li>
+                                                                                                <li><a href="projects-detail.html">Gallery Details</a></li>
+                                                                                                <li><a href="pricing.html">Pricing</a></li>
+                                                                                                <li><a href="faq.html">Faq</a></li>
+                                                                                                <li><a href="team.html">Team</a></li>
+                                                                                                <li><a href="team-single.html">Team Details</a></li>
+                                                                                                <li><a href="shop.html">Shop</a></li>
+                                                                                                <li><a href="shop-details.html">Shop Details</a>
+                                                                                            </ul>
+                                                                                        </li> -->
                                             <!-- <li class="has-sub">
-                                                                                    <a href="blog.html">Blog</a>
-                                                                                    <ul>
-                                                                                        <li><a href="blog.html">Blog</a></li>
-                                                                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                                                                    </ul>
-                                                                                </li> -->
+                                                                                            <a href="blog.html">Blog</a>
+                                                                                            <ul>
+                                                                                                <li><a href="blog.html">Blog</a></li>
+                                                                                                <li><a href="blog-details.html">Blog Details</a></li>
+                                                                                            </ul>
+                                                                                        </li> -->
                                             <li><a href="contacto.html">Contacto</a></li>
                                         </ul>
-
                                     </nav>
                                 </div>
                             </div>
@@ -114,7 +113,7 @@
                                     <ul>
                                         <li>
                                             <div class="header-btn second-header-btn">
-                                                <a href="contact.html" class="btn">Get Started</a>
+                                                <a href="contacto.html" class="btn">Get Started</a>
                                             </div>
                                         </li>
                                     </ul>
