--- a/servicios/index.html
+++ b/servicios/index.html
@@ -66,7 +66,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo">
-                                <a href="index.html"><img src="../img/logo/logo.png" alt="logo"></a>
+                                <a href="/index.html"><img src="../img/logo/logo.png" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-xl-8 col-lg-8">
@@ -116,7 +116,7 @@
                                 <ul>
                                     <li>
                                         <div class="header-btn second-header-btn">
-                                            <a href="contact.html" class="btn">Get Started</a>
+                                            <a href="contacto.html" class="btn">Get Started</a>
                                         </div>
                                     </li>
                                 </ul>
